--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=gestion_biblioteca
+#Persistence | JPA | Conexion | PoolDeConexion
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/kinvana_db
+spring.datasource.username=quintov
+spring.datasource.password=admin
+#Hibernate
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+#Desactivar el tomcat
+spring.main.web-application-type=none
