--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=gestion_biblioteca
 #Persistence | JPA | Conexion | PoolDeConexion
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/kinvana_db
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/gestion_biblioteca_db
 spring.datasource.username=quintov
 spring.datasource.password=admin
 #Hibernate
