--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=gestion_biblioteca
 #Persistence | JPA | Conexion | PoolDeConexion
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/gestion_biblioteca_db
-spring.datasource.username=quintov
-spring.datasource.password=admin
+spring.datasource.username=root
+spring.datasource.password=root
 #Hibernate
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
