--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=gestion_biblioteca
+
+server.port=8082
+
 #Persistence | JPA | Conexion | PoolDeConexion
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/gestion_biblioteca_db
@@ -8,4 +11,5 @@ spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 #Desactivar el tomcat
-spring.main.web-application-type=none
+#spring.main.web-application-type=none
+joinfaces.primefaces.theme=vela
